# model-runner

./: .gitignore  LICENSE  Makefile  README.md  build_cuda.sh  notes.txt  paper_graphs.py  pyproject.toml  run.sh  setup_env.sh  windows_run.txt
data/: README.md  experiment_graphs.ipynb  graphs.ipynb  graphs.py  interference_graphs.ipynb  interference_summary.csv  interference_to_csv.py  notebook_utils.py  runs_summary.csv  runs_to_csv.py
data/baselines/: gpipe.json  gpipe_16x2.json  gpipe_1x32.json  gpipe_2x16.json  gpipe_32x1.json  gpipe_4x8.json  gpipe_8x4.json
data/experiments/exp1/: experiment_meta.json  run_A.json
data/experiments/exp2/: experiment_meta.json  run_A.json
data/interference/: interf2.json
data/run1/: evaluation_output.json  sequential_baseline.json  tensor_parallel_baseline.json
data/runs/: run20.json  run26.json  run31.json
data/sample/: evaluation_output.json  gpipe_baseline.json  sequential_baseline.json  tensor_parallel_baseline.json
docs/: experiment_design.md  hyperparameter_sweep.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  ModuleDisplay.tsx  index.tsx  util.tsx
frontend/src/style/: index.css
model_runner/: __init__.py  adaptive_pipeline.py  device_manager.py  dynamic_pipeline.py  flask_app.py  logger.py  main.py  model_splitter.py  pipeline_optimizer.py  pipeline_runner.py  pipeline_server.py  reactive_pipeline.py  timed_module.py  util.py
model_runner/cuda_timing_kernel/: __init__.py  cuda_timing_kernel.cu
model_runner/gpu_timer/: __init__.py  gpu_timer_binding.cpp
src/: flask_app.py  gpu_timer_kernels.cu  logger.py  main.py  model_splitter.py  model_wrapper.py  setup.py  timed_module.py  timer_wrapper.py
src/gpu_timer/: pyproject.toml  setup.py
src/tests/: conv_next.py  main_test.py
tests/: __init__.py  baseline.py  benchmark.py  benchmark_worker.py  conv_next.py  evaluation.py  experiment.py  flask_test.py  gpipe_sweep.sh  main_test.py  mnist_pg.py  pipeline_test.py  quick_evaluation.py  simple_net.py  sweep.sh  test_main.py  test_splitter.py  testing_models.py  timed_module_overhead.py  util.py
tests/interference/: continuous_eval.py  interfere.py  interfere_eval.py  run_experiment.sh  test_benchmarks.py
