[project]
name = "model-runner"
version = "0.1.0"
description = "Runs models. WIP"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.5.1,<2.7",
    "torchvision>=0.20.1,<0.22",
    "numpy>=1.24,<2.5",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# CUDA index for Linux
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Use PyTorch CUDA wheels only on Linux x86_64
[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
